modified hero section flex

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contacts">Контакты</a>
+            </li>
           </ul>
         </nav>
 
@@ -167,7 +169,7 @@
     <footer class="page-footer">
       <div class="container">
         <a class="logo-footer" href="./index.html"><span>Web</span>Studio</a>
-        <address class="contacts-footer">
+        <address class="contacts-footer" id="contacts">
           <ul class="contacts-footer-items">
             <li class="contacts-footer-item">
               <a
