--- a/portfolio.html
+++ b/portfolio.html
@@ -50,33 +50,33 @@
     <section class="gallery">
       <h1 class="visually-hidden">Галерея</h1>
       <ul class="gallery-filter-items">
-        <li class="gallery-item">
+        <li class="gallery-filter-item">
           <button class="filter-btn btn-active">Все</button>
         </li>
-        <li class="gallery-item">
+        <li class="gallery-filter-item">
           <button class="filter-btn">Веб-сайты</button>
         </li>
-        <li class="gallery-item">
+        <li class="gallery-filter-item">
           <button class="filter-btn">Приложения</button>
         </li>
-        <li class="gallery-item">
+        <li class="gallery-filter-item">
           <button class="filter-btn">Дизайн</button>
         </li>
-        <li class="gallery-item">
+        <li class="gallery-filter-item">
           <button class="filter-btn">Маркетинг</button>
         </li>
       </ul>
 
       <div class="container">
-        <ul class="gallery-portfolio">
-          <li class="gallery-items">
+        <ul class="gallery-portfolio-items">
+          <li class="gallery-portfolio-item">
             <img src="./images/proj-1.jpg" alt="Технокряк" width="370" />
             <div class="gallery-item-text-container">
               <h2 class="gallery-title">Технокряк</h2>
               <p class="gallery-text">Веб-сайт</p>
             </div>
           </li>
-          <li class="gallery-items">
+          <li class="gallery-portfolio-item">
             <img
               src="./images/proj-2.jpg"
               alt="Постер New Orlean vs Golden Star"
@@ -87,28 +87,28 @@
               <p class="gallery-text">Дизайн</p>
             </div>
           </li>
-          <li class="gallery-items">
+          <li class="gallery-portfolio-item">
             <img src="./images/proj-3.jpg" alt="Ресторан Seafood" width="370" />
             <div class="gallery-item-text-container">
               <h2 class="gallery-title">Ресторан Seafood</h2>
               <p class="gallery-text">Приложение</p>
             </div>
           </li>
-          <li class="gallery-items">
+          <li class="gallery-portfolio-item">
             <img src="./images/proj-4.jpg" alt="Проект Prime" width="370" />
             <div class="gallery-item-text-container">
               <h2 class="gallery-title">Проект Prime</h2>
               <p class="gallery-text">Маркетинг</p>
             </div>
           </li>
-          <li class="gallery-items">
+          <li class="gallery-portfolio-item">
             <img src="./images/proj-5.jpg" alt="Проект Boxes" width="370" />
             <div class="gallery-item-text-container">
               <h2 class="gallery-title">Проект Boxes</h2>
               <p class="gallery-text">Приложение</p>
             </div>
           </li>
-          <li class="gallery-items">
+          <li class="gallery-portfolio-item">
             <img
               src="./images/proj-6.jpg"
               alt="Inspiration has no Borders"
@@ -119,7 +119,7 @@
               <p class="gallery-text">Веб-сайт</p>
             </div>
           </li>
-          <li class="gallery-items">
+          <li class="gallery-portfolio-item">
             <img
               src="./images/proj-7.jpg"
               alt="Издание Limited Edition"
@@ -130,14 +130,14 @@
               <p class="gallery-text">Дизайн</p>
             </div>
           </li>
-          <li class="gallery-items">
+          <li class="gallery-portfolio-item">
             <img src="./images/proj-8.jpg" alt="Проект LAB" width="370" />
             <div class="gallery-item-text-container">
               <h2 class="gallery-title">Проект LAB</h2>
               <p class="gallery-text">Маркетинг</p>
             </div>
           </li>
-          <li class="gallery-items">
+          <li class="gallery-portfolio-item">
             <img src="./images/proj-9.jpg" alt="Growing Business" width="370" />
             <div class="gallery-item-text-container">
               <h2 class="gallery-title">Growing Business</h2>
