split the styles into separate files, reset styles, modified studio.css

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,9 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/studio.css" />
+    <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
   <body>
     <header class="page-header">
