--- a/index.html
+++ b/index.html
@@ -140,13 +140,17 @@
                 alt="Игорь Демьяненко"
                 width="270"
               />
-              <h3 class="section-team-title">Игорь Демьяненко</h3>
-              <p class="section-team-text">Product Designer</p>
+              <div class="section-team-container">
+                <h3 class="section-team-title">Игорь Демьяненко</h3>
+                <p class="section-team-text">Product Designer</p>
+              </div>
             </li>
             <li class="section-team-item">
               <img src="./images/team-2.jpg" alt="Ольга Репина" width="270" />
-              <h3 class="section-team-title">Ольга Репина</h3>
-              <p class="section-team-text">Frontend Developer</p>
+              <div class="section-team-container">
+                <h3 class="section-team-title">Ольга Репина</h3>
+                <p class="section-team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="section-team-item">
               <img
@@ -154,13 +158,17 @@
                 alt="Николай Тарасов"
                 width="270"
               />
-              <h3 class="section-team-title">Николай Тарасов</h3>
-              <p class="section-team-text">Marketing</p>
+              <div class="section-team-container">
+                <h3 class="section-team-title">Николай Тарасов</h3>
+                <p class="section-team-text">Marketing</p>
+              </div>
             </li>
             <li class="section-team-item">
               <img src="./images/team-4.jpg" alt="ихаил Ермаков" width="270" />
-              <h3 class="section-team-title">Михаил Ермаков</h3>
-              <p class="section-team-text">UI Designer</p>
+              <div class="section-team-container">
+                <h3 class="section-team-title">Михаил Ермаков</h3>
+                <p class="section-team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
