changed hero-title, removed width body

--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <a class="hero-btn" href="">Заказать услугу</a>
       </section>
 
