--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
         <nav class="main-nav">
           <a class="logo-header" href="./index.html"><span>Web</span>Studio</a>
-          <ul class="nav-items">
+          <ul class="nav-list">
             <li class="nav-item">
               <a class="nav-link link-active" href="">Студия</a>
             </li>
@@ -36,7 +36,7 @@
           </ul>
         </nav>
 
-        <ul class="contacts-header">
+        <ul class="contacts-header-list">
           <li class="contact-header-item">
             <a class="contacts-header-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -59,33 +59,33 @@
 
       <!-- DESCRIPTION -->
 
-      <section class="section-description">
+      <section class="desc">
         <div class="container">
-          <ul class="section-description-items">
-            <li class="section-description-item">
-              <h3 class="section-description-title">Внимание к деталям</h3>
-              <p class="section-description-text">
+          <ul class="desc-list">
+            <li class="desc-item">
+              <h3 class="desc-title">Внимание к деталям</h3>
+              <p class="desc-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="section-description-item">
-              <h3 class="section-description-title">Пунктуальность</h3>
-              <p class="section-description-text">
+            <li class="desc-item">
+              <h3 class="desc-title">Пунктуальность</h3>
+              <p class="desc-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="section-description-item">
-              <h3 class="section-description-title">Планирование</h3>
-              <p class="section-description-text">
+            <li class="desc-item">
+              <h3 class="desc-title">Планирование</h3>
+              <p class="desc-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="section-description-item">
-              <h3 class="section-description-title">Современные технологии</h3>
-              <p class="section-description-text">
+            <li class="desc-item">
+              <h3 class="desc-title">Современные технологии</h3>
+              <p class="desc-text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
@@ -94,27 +94,27 @@
         </div>
       </section>
 
-      <!-- WHAT WE DO -->
+      <!-- WORK -->
 
-      <section class="section-work">
+      <section class="work">
         <div class="container">
-          <h2 class="section-work-title">Чем мы занимаемся</h2>
-          <ul class="section-work-items">
-            <li class="section-work-item">
+          <h2 class="work-title title">Чем мы занимаемся</h2>
+          <ul class="work-list">
+            <li class="work-item">
               <img
                 src="./images/img-1.jpg"
                 alt="Создание Сайтов с нуля"
                 width="370"
               />
             </li>
-            <li class="section-work-item">
+            <li class="work-item">
               <img
                 src="./images/img-2.jpg"
                 alt="Создание веб-приложений"
                 width="370"
               />
             </li>
-            <li class="section-work-item">
+            <li class="work-item">
               <img
                 src="./images/img-3.jpg"
                 alt="Поддержка и обслуживание сайтов"
@@ -127,44 +127,44 @@
 
       <!-- OUR TEAM -->
 
-      <section class="section-team">
+      <section class="team">
         <div class="container">
-          <h2>Наша команда</h2>
-          <ul class="section-team-items">
-            <li class="section-team-item">
+          <h2 class="team-title title">Наша команда</h2>
+          <ul class="team-list">
+            <li class="team-item">
               <img
                 src="./images/team-1.jpg"
                 alt="Игорь Демьяненко"
                 width="270"
               />
-              <div class="section-team-container">
-                <h3 class="section-team-title">Игорь Демьяненко</h3>
-                <p class="section-team-text">Product Designer</p>
+              <div class="team-container">
+                <h3 class="team-subtitle">Игорь Демьяненко</h3>
+                <p class="team-text">Product Designer</p>
               </div>
             </li>
-            <li class="section-team-item">
+            <li class="team-item">
               <img src="./images/team-2.jpg" alt="Ольга Репина" width="270" />
-              <div class="section-team-container">
-                <h3 class="section-team-title">Ольга Репина</h3>
-                <p class="section-team-text">Frontend Developer</p>
+              <div class="team-container">
+                <h3 class="team-subtitle">Ольга Репина</h3>
+                <p class="team-text">Frontend Developer</p>
               </div>
             </li>
-            <li class="section-team-item">
+            <li class="team-item">
               <img
                 src="./images/team-3.jpg"
                 alt="Николай Тарасов"
                 width="270"
               />
-              <div class="section-team-container">
-                <h3 class="section-team-title">Николай Тарасов</h3>
-                <p class="section-team-text">Marketing</p>
+              <div class="team-container">
+                <h3 class="team-subtitle">Николай Тарасов</h3>
+                <p class="team-text">Marketing</p>
               </div>
             </li>
-            <li class="section-team-item">
+            <li class="team-item">
               <img src="./images/team-4.jpg" alt="ихаил Ермаков" width="270" />
-              <div class="section-team-container">
-                <h3 class="section-team-title">Михаил Ермаков</h3>
-                <p class="section-team-text">UI Designer</p>
+              <div class="team-container">
+                <h3 class="team-subtitle">Михаил Ермаков</h3>
+                <p class="team-text">UI Designer</p>
               </div>
             </li>
           </ul>
@@ -176,7 +176,7 @@
       <div class="container">
         <a class="logo-footer" href="./index.html"><span>Web</span>Studio</a>
         <address class="contacts-footer" id="contacts">
-          <ul class="contacts-footer-items">
+          <ul class="contacts-footer-list">
             <li class="contacts-footer-item">
               <a
                 class="contacts-footer-maps"
