--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,6 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/studio.css" />
     <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
   <body>
@@ -24,7 +23,7 @@
       <div class="container">
         <nav class="main-nav">
           <a class="logo-header" href="./index.html"><span>Web</span>Studio</a>
-          <ul class="nav-items">
+          <ul class="nav-list">
             <li class="nav-item">
               <a class="nav-link" href="./index.html">Студия</a>
             </li>
@@ -35,7 +34,7 @@
           </ul>
         </nav>
 
-        <ul class="contacts-header">
+        <ul class="contacts-header-list">
           <li class="contact-header-item">
             <a class="contacts-header-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -49,36 +48,36 @@
         </ul>
       </div>
     </header>
-    <section class="gallery">
+    <section class="portfolio">
       <h1 class="visually-hidden">Галерея</h1>
-      <ul class="gallery-filter-items">
-        <li class="gallery-filter-item">
+      <ul class="portfolio-list">
+        <li class="portfolio-item">
           <button class="filter-btn btn-active">Все</button>
         </li>
-        <li class="gallery-filter-item">
+        <li class="portfolio-item">
           <button class="filter-btn">Веб-сайты</button>
         </li>
-        <li class="gallery-filter-item">
+        <li class="portfolio-item">
           <button class="filter-btn">Приложения</button>
         </li>
-        <li class="gallery-filter-item">
+        <li class="portfolio-item">
           <button class="filter-btn">Дизайн</button>
         </li>
-        <li class="gallery-filter-item">
+        <li class="portfolio-item">
           <button class="filter-btn">Маркетинг</button>
         </li>
       </ul>
 
       <div class="container">
-        <ul class="gallery-portfolio-items">
-          <li class="gallery-portfolio-item">
+        <ul class="gallery-list">
+          <li class="gallery-item">
             <img src="./images/proj-1.jpg" alt="Технокряк" width="370" />
             <div class="gallery-item-text-container">
               <h2 class="gallery-title">Технокряк</h2>
               <p class="gallery-text">Веб-сайт</p>
             </div>
           </li>
-          <li class="gallery-portfolio-item">
+          <li class="gallery-item">
             <img
               src="./images/proj-2.jpg"
               alt="Постер New Orlean vs Golden Star"
@@ -89,28 +88,28 @@
               <p class="gallery-text">Дизайн</p>
             </div>
           </li>
-          <li class="gallery-portfolio-item">
+          <li class="gallery-item">
             <img src="./images/proj-3.jpg" alt="Ресторан Seafood" width="370" />
             <div class="gallery-item-text-container">
               <h2 class="gallery-title">Ресторан Seafood</h2>
               <p class="gallery-text">Приложение</p>
             </div>
           </li>
-          <li class="gallery-portfolio-item">
+          <li class="gallery-item">
             <img src="./images/proj-4.jpg" alt="Проект Prime" width="370" />
             <div class="gallery-item-text-container">
               <h2 class="gallery-title">Проект Prime</h2>
               <p class="gallery-text">Маркетинг</p>
             </div>
           </li>
-          <li class="gallery-portfolio-item">
+          <li class="gallery-item">
             <img src="./images/proj-5.jpg" alt="Проект Boxes" width="370" />
             <div class="gallery-item-text-container">
               <h2 class="gallery-title">Проект Boxes</h2>
               <p class="gallery-text">Приложение</p>
             </div>
           </li>
-          <li class="gallery-portfolio-item">
+          <li class="gallery-item">
             <img
               src="./images/proj-6.jpg"
               alt="Inspiration has no Borders"
@@ -121,7 +120,7 @@
               <p class="gallery-text">Веб-сайт</p>
             </div>
           </li>
-          <li class="gallery-portfolio-item">
+          <li class="gallery-item">
             <img
               src="./images/proj-7.jpg"
               alt="Издание Limited Edition"
@@ -132,14 +131,14 @@
               <p class="gallery-text">Дизайн</p>
             </div>
           </li>
-          <li class="gallery-portfolio-item">
+          <li class="gallery-item">
             <img src="./images/proj-8.jpg" alt="Проект LAB" width="370" />
             <div class="gallery-item-text-container">
               <h2 class="gallery-title">Проект LAB</h2>
               <p class="gallery-text">Маркетинг</p>
             </div>
           </li>
-          <li class="gallery-portfolio-item">
+          <li class="gallery-item">
             <img src="./images/proj-9.jpg" alt="Growing Business" width="370" />
             <div class="gallery-item-text-container">
               <h2 class="gallery-title">Growing Business</h2>
@@ -153,7 +152,7 @@
       <div class="container">
         <a class="logo-footer" href="./index.html"><span>Web</span>Studio</a>
         <address class="contacts-footer">
-          <ul class="contacts-footer-items">
+          <ul class="contacts-footer-list">
             <li class="contacts-footer-item">
               <a
                 class="contacts-footer-maps"
